--- a/Avanzado html/fieldset y legend/index.html
+++ b/Avanzado html/fieldset y legend/index.html
@@ -43,10 +43,11 @@
         <div class="form_input">
             <label>Referente
                 <input list="referente" name="referente">
-            <datalist id="referente" name="type-of-user">
-                <option value="user1">Soy Dalto</option>
-                <option value="user2">Una empresa</option>
-                <option value="user3">Un amigo</option>
+                <datalist id="referente" name="type-of-user">
+                    <option value="user1">Soy Dalto</option>
+                    <option value="user2">Una empresa</option>
+                    <option value="user3">Un amigo</option>
+                </datalist>
             </select>
         </label>
         </div>
